--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bulma": "^0.9.3",
+    "error": "^10.4.0",
+    "error-js": "^0.0.5",
+    "isomorphic-fetch": "^3.0.0",
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-bulma-components": "^4.0.7",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
